# NeMo-Agent-Toolkit

./: .coderabbit.yaml  .cursor.json  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pytest.ini  .vale.ini  1_getting_started.ipynb  2_add_tools_and_agents.ipynb  3_evaluate_and_profiling.ipynb  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile.backend  Dockerfile.ui  HUGGINGFACE_PROVIDERS_AUDIT_REPORT.md  LICENSE-3rd-party.txt  MANIFEST.in  MEMORY_LEAK_ANALYSIS.md  README.md  SECURITY.md  audit_huggingface_providers.py  ca-cert.pem  ca-key.pem  codecov.yml  config.yml  conftest.py  docker-compose.yml  manifest.yaml  nat.code-workspace  nly HEAD  pypi.md  pyproject.toml  rag_agent_traces.json  research_agent.py  scartch.py  (+10 more)
examples/A2A/currency_agent_a2a/: README.md  pyproject.toml
examples/A2A/currency_agent_a2a/configs/: config.yml
examples/A2A/math_assistant_a2a/: README.md  keycloak-oauth-setup-guide.md  oauth2-keycloak-setup.md  pyproject.toml
examples/A2A/math_assistant_a2a/tests/: test_math_assistant_a2a.py
examples/A2A/simple_auth_a2a/: README.md  configs  pyproject.toml
examples/MCP/kaggle_mcp/: README.md  pyproject.toml
examples/MCP/kaggle_mcp/configs/: config-per-user.yml  config.yml
examples/MCP/service_account_auth_mcp/: README.md  pyproject.toml
examples/MCP/service_account_auth_mcp/configs/: config-mcp-service-account-jama.yml  config-mcp-service-account-jira.yml
examples/MCP/simple_auth_mcp/: README.md  pyproject.toml
examples/MCP/simple_auth_mcp/configs/: config-mcp-auth-jira-per-user.yml  config-mcp-auth-jira.yml  config-mcp-auth-outlook.yml  config-per-user-mcp-auth-jira.yml
examples/MCP/simple_calculator_mcp/: README.md  pyproject.toml
examples/MCP/simple_calculator_mcp/configs/: config-combined.yml  config-mcp-auth-dynamic.yml  config-mcp-auth-math.yml  config-mcp-auth-static.yml  config-mcp-client.yml  config-mcp-date-stdio.yml  config-mcp-date.yml  config-mcp-math.yml  config-mcp-server-auth.yml  config-mcp-tool-wrapper.yml  config-per-user-mcp-client.yml
examples/MCP/simple_calculator_mcp/deploy_example_as/: Dockerfile
examples/MCP/simple_calculator_mcp/deploy_external_mcp/: README.md
examples/MCP/simple_calculator_mcp/src/: refresh_mcp_tools.py
examples/MCP/simple_calculator_mcp/tests/: test_simple_calculator_mcp.py
examples/a365_example/: .env.example  README.md  ToolingManifest.json  pyproject.toml
examples/a365_example/configs/: a365_email_notifications.yml  a365_frontend.yml  a365_telemetry.yml  a365_worker.yml  config_a365_bot_with_tooling.yml  config_a365_bot_with_tooling_agentic_s2s.yml  config_a365_bot_with_tooling_agentic_s2s_cache.yml  config_a365_bot_with_tooling_obo.yml  config_a365_bot_with_tooling_s2s_runtime_agent.yml  config_a365_front_end_azure.yml  config_console_only.yml  config_jira_demo.yml  config_local_telemetry_only.yml  config_telemetry_and_tooling.yml
examples/a365_example/deploy/: Dockerfile  README.md  aca_rollout_mcp.sh  build_and_push.sh  deploy_github_mcp.sh  deploy_phoenix.sh
examples/a365_example/docs/: A365-DEV-INVENTORY.md  A365-MCP-NATIVE-SETUP.md  A365-TROUBLESHOOTING-401.md  COMPREHENSIVE_SMOKE_TEST.md  DEPLOYMENT.md  MCP.md  SETUP.md  SHARE_WITH_TEAM.md  TRANSCRIPTS-PROTOTYPE.md  TROUBLESHOOTING.md
examples/a365_example/mcp_servers/github/: Dockerfile  pyproject.toml  server.py
examples/a365_example/mcp_servers/graph_mail/: Dockerfile  deploy.sh  pyproject.toml  server.py
examples/a365_example/mcp_servers/jira/: Dockerfile  deploy.sh  pyproject.toml  server.py
examples/a365_example/mcp_servers/transcripts/: Dockerfile  (+3 more)
examples/a365_example/scripts/: get_a365_token.py  get_graph_mail_token.py  seed_jira_demo.py  seed_top5_emails.py  smoke_all.sh
examples/advanced_agents/profiler_agent/: README.md  pyproject.toml
examples/agentic_workflow/: pyproject.toml
examples/benchmarks/bfcl/: README.md  configs  pyproject.toml
examples/benchmarks/byob/: README.md  configs  pyproject.toml
examples/benchmarks/tooltalk/: README.md  configs  pyproject.toml
examples/confluence_tool/: pyproject.toml
examples/confluence_tool/configs/: config.yml  confluence_config.yml
examples/control_flow/sequential_executor/: README.md  pyproject.toml
examples/dynamo_integration/latency_sensitivity_demo/: INSTALL_LIBRARY.md  README.md  pyproject.toml
examples/dynamo_integration/react_benchmark_agent/: README.md  README_PREDICTION_TRIE.md  configs  pyproject.toml
examples/friday/: README.md  pyproject.toml
examples/friday/configs/: friday_config.yml
examples/gitlab_github_analyzer/: pyproject.toml
examples/gitlab_github_analyzer/configs/: hybrid_analyzer.yml
examples/loki/: pyproject.toml
examples/loki/config/: loki_config.yml
examples/pagerduty_tool/: pyproject.toml
examples/pagerduty_tool/configs/: config.yml
examples/pdf_rag_chatbot/: README.md  pyproject.toml
examples/pdf_rag_chatbot/configs/: incident_rag_chatbot.yml
examples/pdf_rag_ingest/: pyproject.toml
examples/pdf_rag_ingest/config/: pdf_ingest_config.yml
examples/redact_pii/: README.md  pyproject.toml
examples/repository_incident_analyzer/: README.md  README_DUAL_MODE.md  pyproject.toml
examples/repository_incident_analyzer/configs/: combined_analyzer.yml  incident_only.yml  repository_only.yml
examples/simple_guardrails/: README.md  configs  pyproject.toml
examples/slack/: pyproject.toml
examples/slack/configs/: slack_config.yml
examples/summarizer/: pyproject.toml
examples/text2sql/: .gitignore  GETTING_STARTED.md  LOAD_TESTING.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SUMMARY.md  __init__.py  analyze_memory_leak.py  config_text2sql_mcp.yml  configs  data  env.example  load_test_text2sql.py  monitor_memory.py  monitor_server_memory.py  pyproject.toml  run_text2sql_load_test.sh  run_text2sql_memory_leak_test.py  sql_utils.py  text2sql_function.py  text2sql_load_test.py  text2sql_standalone.py  verify_load_test_setup.py  verify_setup.py
examples/text2sql/test_results/: text2sql_memory_20251009_135134.csv
(+2905 files in other folders)
