# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES.
# All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"

[project]
name = "nvidia-nat"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.11,<3.14"
description = "NVIDIA NeMo Agent toolkit"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["ai", "rag", "agents"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
authors = [{ name = "NVIDIA Corporation" }]
maintainers = [{ name = "NVIDIA Corporation" }]

[project.urls]
documentation = "https://docs.nvidia.com/nemo/agent-toolkit/latest/"
source = "https://github.com/NVIDIA/NeMo-Agent-Toolkit"

[tool.setuptools_dynamic_dependencies]
dependencies = ["nvidia-nat-core == {version}"]

[tool.setuptools_dynamic_dependencies.optional-dependencies]
# Optional dependencies are things that users would want to install with NAT. i.e. `uv pip install "nvidia-nat[langchain]"`
# Keep sorted!!!
a2a = ["nvidia-nat-a2a == {version}"]
adk = ["nvidia-nat-adk == {version}"]
agno = ["nvidia-nat-agno == {version}"]
autogen = ["nvidia-nat-autogen == {version}"]
core = ["nvidia-nat-core == {version}"]
crewai = ["nvidia-nat-crewai == {version}"]
data-flywheel = ["nvidia-nat-data-flywheel == {version}"]
langchain = ["nvidia-nat-langchain == {version}"]
llama-index = ["nvidia-nat-llama-index == {version}"]
mcp = ["nvidia-nat-mcp == {version}"]
mem0ai = ["nvidia-nat-mem0ai == {version}"]
nemo-customizer = ["nvidia-nat-nemo-customizer == {version}"]
openpipe-art = ["nvidia-nat-openpipe-art == {version}"]
opentelemetry = ["nvidia-nat-opentelemetry == {version}"]
phoenix = ["nvidia-nat-phoenix == {version}"]
ragaai = ["nvidia-nat-ragaai == {version}"]
mysql = ["nvidia-nat-mysql == {version}"]
redis = ["nvidia-nat-redis == {version}"]
s3 = ["nvidia-nat-s3 == {version}"]
semantic-kernel = ["nvidia-nat-semantic-kernel == {version}"]
strands = ["nvidia-nat-strands == {version}"]
telemetry = [
  "nvidia-nat-data-flywheel == {version}",
  "nvidia-nat-opentelemetry == {version}",
  "nvidia-nat-phoenix == {version}",
  "nvidia-nat-ragaai == {version}",
  "nvidia-nat-weave == {version}",
]
test = ["nvidia-nat-test == {version}"]
vanna = ["nvidia-nat-vanna == {version}"]
weave = ["nvidia-nat-weave == {version}"]
zep-cloud = ["nvidia-nat-zep-cloud == {version}"]

async_endpoints = [
  "nvidia-nat-core[async_endpoints] == {version}"
]
gunicorn = [
  "nvidia-nat-core[gunicorn] == {version}"
]
ingestion = [
  "nvidia-nat-core[ingestion] == {version}"
]
litellm = [
  "nvidia-nat-core[litellm] == {version}"
]
nvidia_haystack = [
  "nvidia-nat-core[nvidia_haystack] == {version}"
]
openai = [
  "nvidia-nat-core[openai] == {version}"
]
pii-defense = [
  "nvidia-nat-core[pii-defense] == {version}"
]
profiling = [
  "nvidia-nat-core[profiling] == {version}"
]

[dependency-groups]
# Dependency groups are only for developers to aid in managing dependencies local to a dev machine.
dev = [
  "nvidia-nat-core[dev]"
]

[tool.setuptools]
include-package-data = true
packages = []

[tool.uv.sources]
nvidia-nat-a2a = { path = "packages/nvidia_nat_a2a", editable = true }
nvidia-nat-adk = { path = "packages/nvidia_nat_adk", editable = true }
nvidia-nat-agno = { path = "packages/nvidia_nat_agno", editable = true }
nvidia-nat-autogen = { path = "packages/nvidia_nat_autogen", editable = true }
nvidia-nat-core = { path = "packages/nvidia_nat_core", editable = true }
nvidia-nat-crewai = { path = "packages/nvidia_nat_crewai", editable = true }
nvidia-nat-data-flywheel = { path = "packages/nvidia_nat_data_flywheel", editable = true }
nvidia-nat-langchain = { path = "packages/nvidia_nat_langchain", editable = true }
nvidia-nat-llama-index = { path = "packages/nvidia_nat_llama_index", editable = true }
nvidia-nat-mcp = { path = "packages/nvidia_nat_mcp", editable = true }
nvidia-nat-mem0ai = { path = "packages/nvidia_nat_mem0ai", editable = true }
nvidia-nat-nemo-customizer = { path = "packages/nvidia_nat_nemo_customizer", editable = true }
nvidia-nat-openpipe-art = { path = "packages/nvidia_nat_openpipe_art", editable = true }
nvidia-nat-opentelemetry = { path = "packages/nvidia_nat_opentelemetry", editable = true }
nvidia-nat-phoenix = { path = "packages/nvidia_nat_phoenix", editable = true }
nvidia-nat-ragaai = { path = "packages/nvidia_nat_ragaai", editable = true }
nvidia-nat-mysql = { path = "packages/nvidia_nat_mysql", editable = true }
nvidia-nat-redis = { path = "packages/nvidia_nat_redis", editable = true }
nvidia-nat-s3 = { path = "packages/nvidia_nat_s3", editable = true }
nvidia-nat-semantic-kernel = { path = "packages/nvidia_nat_semantic_kernel", editable = true }
nvidia-nat-strands = { path = "packages/nvidia_nat_strands", editable = true }
nvidia-nat-test = { path = "packages/nvidia_nat_test", editable = true }
nvidia-nat-vanna = { path = "packages/nvidia_nat_vanna", editable = true }
nvidia-nat-weave = { path = "packages/nvidia_nat_weave", editable = true }
nvidia-nat-zep-cloud = { path = "packages/nvidia_nat_zep_cloud", editable = true }

# List any markers that users would reasonably want to filter by.
# These show up when querying `pytest --markers`
[tool.pytest.ini_options]
markers = [
  "benchmark: Benchmarks",
  "integration: Integration tests which do not use mocks and may require external services",
  "requires_cache: Tests that require a reverse-proxy cache to be running",
  "slow: Slow tests",
]
filterwarnings = [
  # Work-around for a warning emitted by strands https://github.com/strands-agents/sdk-python/issues/1236
  "ignore:^These events have been moved to production.*strands:DeprecationWarning",
]
testpaths = ["tests", "examples/**/tests", "packages/**/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# Global timeout of 5 minutes per test to catch hanging tests.
# Individual tests can override with @pytest.mark.timeout(seconds) or disable with @pytest.mark.timeout(0)
timeout = 300

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120
target-version = "py311"

[tool.ruff.lint]

select = [
  # The E, F, W categories are flake8 rules.
  "E",
  "F",
  "W",
  # Enable isort support
  "I",
  # Enable partial pylint support
  "PL",
  # Enable pyupgrade support
  "UP"
]

extend-ignore = [
  "PLC0415", # Allow lazy imports inside functions
  # Disable all the "too-*" checks, as they are too strict for our codebase
  "PLR0904", # too-many-public-methods
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0914", # too-many-locals
  "PLR0915", # too-many-statements
  "PLR0917", # too-many-positional-arguments
  "PLR1702", # too-many-nested-blocks
  "PLR2004", # Magic value used in comparison this happens a lot within unittests
  "PLW0108", # unnecessary-lambda
  "PLW2901", # allow re-assigning a loop variable
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
force-single-line = true
known-first-party = ["aiq", "nat", "nat_*", "_utils"]
known-third-party = [
  "agno",
  "autogen",
  "crewai",
  "google",
  "langchain",
  "llama_index",
  "mem0ai",
  "redis",
  "semantic_kernel",
  "zep_cloud",
]
order-by-type = true

# ===== yapf Config =====
[tool.yapf]
based_on_style = "pep8"
column_limit = 120
split_all_top_level_comma_separated_values = true
join_multiple_lines = true
indent_dictionary_value = true


# ===== pyright Config =====
[tool.pyright]
deprecateTypingAliases = true
reportInvalidTypeForm = "warning"
