[build-system]
requires = ["setuptools >= 64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pagerduty-tool"
version = "1.0.0"
description = "PagerDuty Incident Analyzer using AIQ Toolkit"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "requests",
    "pydantic",
    "httpx",
    "python-dotenv",
]
requires-python = ">=3.11"

[project.entry-points."aiq.components"]
# Register PagerDuty tools with AIQ toolkit
pagerduty_tools = "pagerduty_tool.register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pagerduty_tool*"]

[tool.setuptools]
include-package-data = true