[build-system]
requires = ["setuptools >= 64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag-chatbot"
version = "1.0.0"
description = "RAG Chatbot for PDF Documents with Conversation Memory using AIQ Toolkit"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pydantic",
    "langchain-core",
    "langchain-community",
]
requires-python = ">=3.11"

[project.entry-points."aiq.components"]
# Register RAG chatbot tools with AIQ toolkit
pdf_rag_tools = "pdf_rag_chatbot.register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf_rag_chatbot*"]

[tool.setuptools]
include-package-data = true 