[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../.."

[project]
name = "redact_pii"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[weave]~=1.1",
]
requires-python = ">=3.11,<3.13"
description = "Simple Redact PII example"
keywords = ["ai", "pii", "redaction"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../../", editable = true }

[project.entry-points.'aiq.components']
redact_pii = "redact_pii.register"
