[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_currency_agent_a2a"
dynamic = ["version"]
dependencies = [
    "nvidia-nat[a2a]~=1.4",
]
requires-python = ">=3.11,<3.14"
description = "A2A client example for currency exchange rate queries"
keywords = ["ai", "mcp", "protocol", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
