[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_service_account_auth_mcp"
dynamic = ["version"]
dependencies = [
    "nvidia-nat[mcp]~=1.4",
]
requires-python = ">=3.11,<3.14"
description = "MCP service account authentication example for headless workflows"
keywords = ["ai", "mcp", "protocol", "agents", "service-account", "oauth2"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
