[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_service_account_auth_mcp"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11,<3.14"
description = "MCP Service Account Authentication - demonstrates headless OAuth2 service account authentication for MCP servers"
keywords = ["ai", "mcp", "authentication", "oauth2", "service-account"]
classifiers = ["Programming Language :: Python"]

[tool.setuptools_dynamic_dependencies]
dependencies = [
  "nvidia-nat[mcp] == {version}",
]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
