[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_simple_calculator_mcp"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11,<3.14"
description = "Simple Calculator MCP - demonstrates NeMo Agent toolkit Model Context Protocol integration"
keywords = ["ai", "mcp", "protocol", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.setuptools_dynamic_dependencies]
dependencies = [
  "nvidia-nat[langchain,mcp] == {version}",
  "nat_simple_calculator",
  "mcp-server-time~=2025.8",
]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
nat_simple_calculator = { path = "../../getting_started/simple_calculator", editable = true }
