[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_profiler_agent"
dynamic = ["version"]
dependencies = [
  # Keep sorted!!!
  "nvidia-nat[langchain,profiling,telemetry]~=1.5",
  "arize-phoenix-client~=1.21",
  "pydantic", # version determined by nvidia-nat
]
requires-python = ">=3.11,<3.14"
description = "NeMo Agent toolkit Profiler Agent"
license = { file = "LICENSE.md" }
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]
authors = [{ name = "NVIDIA Corporation" }]
maintainers = [{ name = "NVIDIA Corporation" }]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.plugins']
nat_profiler_agent = "nat_profiler_agent.register"
