[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_profiler_agent"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11,<3.14"
description = "NeMo Agent toolkit Profiler Agent"
license = { file = "LICENSE.md" }
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]
authors = [{ name = "NVIDIA Corporation" }]
maintainers = [{ name = "NVIDIA Corporation" }]

[tool.setuptools_dynamic_dependencies]
dependencies = [
  "nvidia-nat[langchain,profiling,telemetry] == {version}",
  "arize-phoenix-client~=1.21.0",
  "pydantic",
]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.plugins']
nat_profiler_agent = "nat_profiler_agent.register"
