# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nat_benchmark_bfcl"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11,<3.14"
description = "BFCL (Berkeley Function Calling Leaderboard) benchmark evaluation example for NeMo Agent Toolkit"
classifiers = ["Programming Language :: Python"]

[tool.setuptools_dynamic_dependencies]
dependencies = [
  "nvidia-nat[eval,langchain,test] == {version}",
  "nvidia-nat-benchmarks[bfcl] == {version}",
]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
nvidia-nat-benchmarks = { path = "../../../packages/nvidia_nat_benchmarks", editable = true }

[project.entry-points.'nat.components']
nat_benchmark_bfcl = "nat_benchmark_bfcl.register"
