[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_sequential_executor"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11,<3.14"
description = "Sequential executor for NeMo Agent toolkit"
classifiers = ["Programming Language :: Python"]

[tool.setuptools_dynamic_dependencies]
dependencies = [
  "nvidia-nat[langchain] == {version}",
]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_sequential_executor = "nat_sequential_executor.register"
