[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nat_latency_sensitivity_demo"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11,<3.14"
description = "Demonstrates automatic latency sensitivity inference with LangGraph"
classifiers = ["Programming Language :: Python"]

[tool.setuptools_dynamic_dependencies]
dependencies = [
  "nvidia-nat[eval,langchain,test] == {version}",
]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
latency_sensitivity_demo = "latency_sensitivity_demo.register"
